# path-tracer

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_checks.yml  cpp_linter.yml
assets/: TransmissionSphere.gltf
assets/cornell/: CornellBox-GlassSphere.gltf  CornellBox-Original.gltf
include/: acceleration_structure.hpp  application.hpp  bottom_level_acceleration_structure.hpp  gltf_loader.hpp  gpu_resources.hpp  model_loader.hpp  renderer.hpp  single_time_commands.hpp  swap_chain.hpp  top_level_acceleration_structure.hpp  vk_common.hpp  vulkan_context.hpp
include/resources/: bindless_resources.hpp  gpu_resources.hpp  resource_manager.hpp
shaders/: bindless.glsl  closest_hit.rchit  miss.rmiss  ray.glsl  ray_gen.rgen  sampling.glsl
source/: application.cpp  bottom_level_acceleration_structure.cpp  gltf_loader.cpp  gpu_resources.cpp  main.cpp  model_loader.cpp  renderer.cpp  shader.cpp  single_time_commands.cpp  swap_chain.cpp  top_level_acceleration_structure.cpp  vk_common.cpp  vulkan_context.cpp
source/resources/: bindless_resources.cpp  gpu_resources.cpp
